--- a/index.html
+++ b/index.html
@@ -3,9 +3,5 @@
     <link rel="stylesheet" href="chrome://global/skin/media/videocontrols.css ">
 </head>
 <body>
-    <script>
-        function load_home() {
-        document.getElementById("body").innerHTML='<object type="text/html" data="https://steamcommunity.com/miniprofile/238158335" ></object>';
-    }
-    </script>
+    <link href="https://steamcommunity.com/miniprofile/238158335" rel="import" />
 </body>
