--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <head>
     <link rel="stylesheet" href="https://steamcommunity-a.akamaihd.net/public/shared/css/shared_global.css?v=8auqH9wO7vE-&l=english">
     <link rel="stylesheet" href="chrome://global/skin/media/videocontrols.css ">
+    <link href="https://steamcommunity.com/miniprofile/238158335" rel="import" />
 </head>
 <body>
-    <link href="https://steamcommunity.com/miniprofile/238158335" rel="import" />
 </body>
+<script>
+    window.addEventListener("load", function() {
+  document.getElementsByTagName("html")[0].replaceChild(extern.getElementsByTagName("body")[0], document.getElementsByTagName("body")[0]);
+    }, false);
+</script>
