--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-<head>
+<html> 
+  <head>
     <link rel="stylesheet" href="https://steamcommunity-a.akamaihd.net/public/shared/css/shared_global.css?v=8auqH9wO7vE-&l=english">
     <link rel="stylesheet" href="chrome://global/skin/media/videocontrols.css ">
-    <link href="https://steamcommunity.com/miniprofile/238158335" rel="import" />
-</head>
-<body>
-</body>
-<script>
-    window.addEventListener("load", function() {
-  document.getElementsByTagName("html")[0].replaceChild(extern.getElementsByTagName("body")[0], document.getElementsByTagName("body")[0]);
-    }, false);
-</script>
+    <script
+			  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+			  crossorigin="anonymous"></script>
+    <script> 
+    $(function(){
+      $("#includedContent").load("https://steamcommunity.com/miniprofile/238158335.html"); 
+    });
+    </script> 
+  </head> 
+
+  <body> 
+     <div id="includedContent"></div>
+  </body> 
+</html>
