--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 			  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
 			  crossorigin="anonymous"></script>
-    <script> 
+  </script> 
     $(function(){
       $("#includedContent").load("https://steamcommunity.com/miniprofile/238158335.html"); 
     });
