--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
   <head>
     <link rel="stylesheet" href="https://steamcommunity-a.akamaihd.net/public/shared/css/shared_global.css?v=8auqH9wO7vE-&l=english">
     <link rel="stylesheet" href="chrome://global/skin/media/videocontrols.css ">
-    <script
-			  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-			  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-			  crossorigin="anonymous"></script>
-  <script> 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+    
+    <script> 
     $(function(){
       $("#includedContent").load("https://steamcommunity.com/miniprofile/238158335.html"); 
     });
