--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script> 
     $(function(){
-      $("#includedContent").load("https://steamcommunity.com/miniprofile/238158335.html"); 
+      $("#includedContent").load("https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/238158335.html"); 
     });
     </script> 
   </head> 
