--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script> 
     $(function(){
-      $("#includedContent").load("https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/238158335.html"); 
+      let searchParams = new URLSearchParams(window.location.search);
+      if(searchParams.has('accountId'))
+        $("#includedContent").load("https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/${accountId}.html");
+      else 
+        $("#includedContent").load("https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/238158335.html"); 
     });
     </script> 
   </head> 
