--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     $(function(){
       let searchParams = new URLSearchParams(window.location.search);
       if(searchParams.has('accountId'))
-        $("#includedContent").load("https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/${accountId}.html");
+        $("#includedContent").load(`https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/${accountId}.html`);
       else 
         $("#includedContent").load("https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/238158335.html"); 
     });
