--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         $("#includedContent").load("https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/238158335.html"); 
     });
     </script> 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172121567-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-172121567-2');
+    </script>
   </head> 
 
   <body> 
