--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
       let searchParams = new URLSearchParams(window.location.search);
       if(searchParams.has('accountId')){
         let accountId = searchParams.get('accountId');
-        $("#includedContent").load(`https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/${accountId}.html`);
+        $("#includedContent").load(`https://steamcommunity.com/miniprofile/${accountId}.html`, function() {
+          $(".playersection_avatar_frame>img").attr("src","https://steamcdn-a.akamaihd.net/steamcommunity/public/assets/rewardsseason1/goldenprofile/presige_frame_anim.png?v=2");
+        });
       }
-      else 
-        $("#includedContent").load("https://cors-anywhere.herokuapp.com/https://steamcommunity.com/miniprofile/238158335.html"); 
+      else {
+        $("#includedContent").load("https://steamcommunity.com/miniprofile/238158335.html", function() {
+          $(".playersection_avatar_frame>img").attr("src","https://steamcdn-a.akamaihd.net/steamcommunity/public/assets/rewardsseason1/goldenprofile/presige_frame_anim.png?v=2");
+        }); 
+      }
     });
     </script> 
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -27,5 +32,5 @@
 
   <body> 
      <div id="includedContent"></div>
-  </body> 
+  </body>
 </html>
