--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       let searchParams = new URLSearchParams(window.location.search);
       if(searchParams.has('accountId')){
         let accountId = searchParams.get('accountId');
-        $("#includedContent").load(`https://proxy.cors.sh/https://steamcommunity.com/miniprofile/${accountId}.html`);
+        $("#includedContent").load(`https://candle-lopsided-baritone.glitch.me/https://steamcommunity.com/miniprofile/${accountId}.html`);
       }
       else {
-        $("#includedContent").load("https://proxy.cors.sh/https://steamcommunity.com/miniprofile/238158335.html"); 
+        $("#includedContent").load("https://candle-lopsided-baritone.glitch.me/https://steamcommunity.com/miniprofile/238158335.html"); 
       }
     });
     </script> 
