--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noindex, nofollow">
@@ -6,11 +6,16 @@
 
 
 <head>
-  <link async rel="stylesheet" href="https://community.cloudflare.steamstatic.com/public/shared/css/shared_global.css">
+  <link async rel="preload" as="style"
+    href="https://community.cloudflare.steamstatic.com/public/shared/css/shared_global.css"
+    onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" href="https://community.cloudflare.steamstatic.com/public/shared/css/shared_global.css">
+  </noscript>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script async>
+  <script defer async>
     $(function () {
       let searchParams = new URLSearchParams(window.location.search);
       let corsHost = "https://candle-lopsided-baritone.glitch.me/"
