--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       let searchParams = new URLSearchParams(window.location.search);
       let corsHost = "https://steam-miniprofile-cors.glitch.me/"
       let steamId = searchParams.get('accountId') ? searchParams.get('accountId') : '238158335';
+      if(steamId === 'YOUR_ACCOUNTID_HERE') {
+        steamId = '238158335';
+      }
 
       $.get(`${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}`, function (data) {
         $("#includedContent").html(data).hide();
