--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
       let searchParams = new URLSearchParams(window.location.search);
       let corsHost = "https://steam-miniprofile-cors.glitch.me/"
       let steamId = searchParams.get('accountId') ? searchParams.get('accountId') : '238158335';
+      let language = searchParams.get('lang') ? searchParams.get('lang') : 'vietnamese';
       if(steamId === 'YOUR_ACCOUNTID_HERE') {
         steamId = '238158335';
       }
 
-      $.get(`${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}`, function (data) {
+      $.get(`${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}?l=${language}`, function (data) {
         $("#includedContent").html(data).hide();
         if ($("#includedContent").children().text().length != 0) {
           $(".default").fadeOut("fast", function () {
