--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       let searchParams = new URLSearchParams(window.location.search);
       let corsHost = "https://steam-miniprofile-cors.glitch.me/"
       let steamId = searchParams.get('accountId') ? searchParams.get('accountId') : '238158335';
-      let language = searchParams.get('lang') ? searchParams.get('lang') : 'vietnamese';
+      // For list of available languages, check out README on https://github.com/gamer2810/steam-miniprofile
+      let language = searchParams.get('lang') ? searchParams.get('lang') : 'english';
       if(steamId === 'YOUR_ACCOUNTID_HERE') {
         steamId = '238158335';
       }
