--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
       let searchParams = new URLSearchParams(window.location.search);
       let corsHost = "https://steam-miniprofile-cors.glitch.me/"
       let steamId = searchParams.get('accountId') ? searchParams.get('accountId') : '238158335';
+      let interactive = searchParams.get('interactive') ? searchParams.get('lang') : false;
+      let vanityId = searchParams.get('vanity') ? searchParams.get('vanityId') : '';
       // For list of available languages, check out README on https://github.com/gamer2810/steam-miniprofile
       let language = searchParams.get('lang') ? searchParams.get('lang') : 'english';
+      let corsURL = `${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}?l=${language}`;
+      let steamURL = `https://steamcommunity.com/id/{vanityId}`;
+      
       if(steamId === 'YOUR_ACCOUNTID_HERE') {
         steamId = '238158335';
       }
 
-      $.get(`${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}?l=${language}`, function (data) {
+      $.get(corsURL, function (data) {
         $("#includedContent").html(data).hide();
         if ($("#includedContent").children().text().length != 0) {
           $(".default").fadeOut("fast", function () {
@@ -34,7 +39,16 @@
             $(".default").fadeIn("fast");
           });
         }
+        
+        if(interactive && vanityId != null) {
+          $('#includedContent').on('click', function(e){ 
+              e.preventDefault(); 
+              var url = $(this).attr('href'); 
+              window.open(steamURL, '_blank');
+          });
+        }
       });
+
     });
   </script>
 </head>
