--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       let corsHost = "https://steam-miniprofile-cors.glitch.me/"
       let steamId = searchParams.get('accountId') ? searchParams.get('accountId') : '238158335';
       let interactive = searchParams.get('interactive') ? searchParams.get('interactive') : false;
-      let vanityId = searchParams.get('vanity') ? searchParams.get('vanityId') : '';
+      let vanityId = searchParams.get('vanityId') ? searchParams.get('vanityId') : '';
       // For list of available languages, check out README on https://github.com/gamer2810/steam-miniprofile
       let language = searchParams.get('lang') ? searchParams.get('lang') : 'english';
       let corsURL = `${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}?l=${language}`;
