feat: add window event on frame loaded

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
             $(".default").replaceWith(data);
             $(".default").fadeIn("fast");
           });
+
+          window.parent.postMessage(
+            {
+              state:"loaded"
+            }, {
+            targetOrigin: '*',
+          })
         }
         
         if(interactive && vanityId) {
