--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       let corsURL = `${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}?l=${language}`;
       let steamURL = `https://steamcommunity.com/id/${vanityId}`;
       
-      if(steamId === 'YOUR_ACCOUNTID_HERE') {
-        steamId = '238158335';
+      if(steamId === 'AK108') {
+        steamId = '76561199434692103';
       }
 
       $.get(corsURL, function (data) {
