Allow featured game

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       let vanityId = searchParams.get('vanityId') ? searchParams.get('vanityId') : '';
       // For list of available languages, check out README on https://github.com/gamer2810/steam-miniprofile
       let language = searchParams.get('lang') ? searchParams.get('lang') : 'english';
-      let corsURL = `${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}?l=${language}`;
+      let featuredGame = searchParams.get('appId') ? searchParams.get('appId') : '';
+      let corsURL = `${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}?l=${language}&appId=${featuredGame}`;
       let steamURL = `https://steamcommunity.com/id/${vanityId}`;
       
       if(steamId === 'YOUR_ACCOUNTID_HERE') {
