--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </script>
 </head>
 
-<body style="height: fit-content; width: fit-content;">
+<body style="height: fit-content; width: fit-content; background:none transparent;">
   <div id="includedContent"></div>
   <!-- default miniprofile while waiting for the real one to load -->
   <!-- cache to help with load time -->
