--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <script defer async>
     $(function () {
       let searchParams = new URLSearchParams(window.location.search);
-      let corsHost = "https://steam-miniprofile-cors.glitch.me/"
+      let corsHost = "https://nodejs-serverless-function-express-seven-phi-15.vercel.app/api/hello"
       let steamId = searchParams.get('accountId') ? searchParams.get('accountId') : '238158335';
       let interactive = searchParams.get('interactive') ? searchParams.get('interactive') : false;
       let vanityId = searchParams.get('vanityId') ? searchParams.get('vanityId') : '';
       // For list of available languages, check out README on https://github.com/gamer2810/steam-miniprofile
       let language = searchParams.get('lang') ? searchParams.get('lang') : 'english';
       let featuredGame = searchParams.get('appId') ? searchParams.get('appId') : '';
-      let corsURL = `${corsHost}https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}?l=${language}&appId=${featuredGame}`;
+      let corsURL = `${corsHost}?url=https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}&l=${language}&appId=${featuredGame}`;
       let steamURL = `https://steamcommunity.com/id/${vanityId}`;
       
       if(steamId === 'YOUR_ACCOUNTID_HERE') {
