--- a/index.html
+++ b/index.html
@@ -25,11 +25,25 @@
       // For list of available languages, check out README on https://github.com/gamer2810/steam-miniprofile
       let language = searchParams.get('lang') ? searchParams.get('lang') : 'english';
       let featuredGame = searchParams.get('appId') ? searchParams.get('appId') : '';
+      let centered = searchParams.get('centered') ? searchParams.get('centered') : false;
       let corsURL = `${corsHost}?url=https%3A%2F%2Fsteamcommunity.com%2Fminiprofile%2F${steamId}&l=${language}&appId=${featuredGame}`;
       let steamURL = `https://steamcommunity.com/id/${vanityId}`;
       
       if(steamId === 'YOUR_ACCOUNTID_HERE') {
         steamId = '238158335';
+      }
+
+        if (centered) {
+        const style = document.createElement('style');
+        style.textContent = `
+          html {
+              display: grid;
+              align-items: center;
+              justify-content: center;
+              justify-items: start;
+          }
+        `;
+        document.head.appendChild(style);
       }
 
       $.get(corsURL, function (data) {
